Fix: Add clip-path to character header and edit scrollbar behaviour

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -15,7 +15,7 @@
   --font-primary: 'Roboto Condensed', sans-serif;
 
   /* Font sizes */
-  --xl-font-size: 48px;
+  --xl-font-size: 40px;
   --lg-font-size: 32px;
   --md-font-size: 16px;
   --sm-font-size: 15.05px;
