--- a/src/pages/CharacterDetail/CharacterDetail.module.css
+++ b/src/pages/CharacterDetail/CharacterDetail.module.css
@@ -11,6 +11,13 @@
   justify-content: center;
   background-color: var(--dark-color);
   width: 100%;
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - 24px),
+    calc(100% - 24px) 100%,
+    0 100%
+  );
 }
 
 .contentHeader {
@@ -85,11 +92,11 @@
   justify-content: flex-start;
   overflow-x: auto;
   scroll-behavior: smooth;
-  cursor: grab;
   gap: var(--sm-gap);
   background-color: var(--light-color);
   position: relative;
   width: 100%;
+  padding-bottom: var(--md-gap);
 }
 
 .comicsLayout.flexStart {
@@ -97,8 +104,8 @@
 }
 
 .comicsLayout::-webkit-scrollbar {
-  height: 8px;
-  background-color: #ccc;
+  height: var(--slider-height);
+  background-color: var(--secondary-slider-color);
 }
 
 .comicsLayout::-webkit-scrollbar-thumb {
@@ -157,6 +164,8 @@
 
 .toggleHeart {
   cursor: pointer;
+  width: 24px;
+  height: 21.68px;
 }
 
 /* Media Queries */
